# CMakeList.txt : CMake project for Classes, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Classes")

# Add source to this project's executable.
add_executable (Classes "Classes.cpp" "Classes.h")

# TODO: Add tests and install targets if needed.
